# odmr_sim

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: README.md  theory.md  tutorial_custom_model.md  tutorial_initialization.md  tutorial_odmr.md  tutorial_readout.md
examples/: README.md
examples/custom_8_level/: example_8_level_model.py  example_custom_model.py
examples/g11_gm9_30dp/: example_contrast_comparison.py  example_initialization.py  example_odmr_contrast.py  example_readout.py
examples/g4_g9_90dp/: example_initialization.py  example_odmr_contrast.py  example_readout.py
examples/g9_g8_30dp/: example_initialization.py  example_odmr_contrast.py  example_readout.py
examples/gp7_gp3_30dp/: example_initialization.py  example_odmr_contrast.py  example_readout.py
examples/nv_bulk/: example_initialization.py  example_odmr_contrast.py  example_readout.py
odmr_sim/: __init__.py
odmr_sim/models/: __init__.py  base.py  presets.py  seven_level.py
odmr_sim/plotting/: __init__.py  visualize.py
odmr_sim/simulations/: __init__.py  initialization.py  odmr.py  readout.py
odmr_sim/solvers/: __init__.py  rate_solver.py
tests/: __init__.py  test_models.py  test_simulations.py  test_solvers.py
