[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "odmr_sim"
version = "0.1.0"
description = "ODMR simulation using configurable N-level rate equation models"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Yu Jin", email = "yjin@flatironinstitute.org"}
]
keywords = ["ODMR", "NV center", "spin dynamics", "rate equations", "simulation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=1.20",
    "scipy>=1.7",
    "matplotlib>=3.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "jupyter>=1.0",
]

[project.urls]
Homepage = "https://github.com/jinyuchem/odmr_sim"
Documentation = "https://github.com/jinyuchem/odmr_sim#readme"
Repository = "https://github.com/jinyuchem/odmr_sim"

[tool.setuptools.packages.find]
where = ["."]
include = ["odmr_sim*"]
